2010-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/EvaluationOptions.cs: Added clone
	  method.

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Fix crash
	  when parsing enums.

	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Evaluation/BaseTypeViewSource.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs: Reset
	  the child selector for values which are only visual group of
	  members.

2010-02-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Add null check.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/TargetEventArgs.cs:
	* Mono.Debugging.Evaluation/BaseBacktrace.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added
	  method for getting the current exception when a catchpoint
	  is hit or an exception unhandled.

2010-02-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Fix win32 build.

2010-02-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Evaluation/BaseBacktrace.cs:
	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/ValueReference.cs:
	* Mono.Debugging.Backend/IObjectValueSource.cs:
	* Mono.Debugging.Evaluation/EvaluationContext.cs:
	* Mono.Debugging.Evaluation/ArrayElementGroup.cs:
	* Mono.Debugging.Evaluation/BaseTypeViewSource.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/ExpressionEvaluator.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs: Add