@@ -1,3 +1,9 @@
+2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
+	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Add
+	  support for indexer with more than one parameter.
+
 2010-02-26  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Client/EvaluationOptions.cs: Added clone
